# EmulateOpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  precompiled.hpp
.github/workflow/: linux.yml
.github/workflows/: linux.yml  windows.yml
